--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-    "name": "permify-nextjs",
-    "version": "1.0.0",
-    "main": "src/index.js",
-    "license": "MIT",
-    "description": "Simple, flat-permissions-based access control for Next.js apps. Reliable alternative to Permify HasAccess for the App Directory.",
-    "peerDependencies": {
-      "react": ">=18.0.0",
-      "next": ">=13.0.0"
-    },
-    "keywords": ["permify", "nextjs", "permissions", "rbac", "matter"]
-}
-  
+  "name": "permify-nextjs",
+  "version": "0.1.0",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "exports": {
+    ".": "./index.js"
+  },
+  "files": [
+    "dist",
+    "index.js"
+  ],
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "next": ">=13.0.0"
+  },
+  "scripts": {
+    "build": "babel . --out-dir dist --extensions .js,.jsx --ignore node_modules,dist,*.test.js,*.test.jsx"
+  }
+} 
