--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "permify-nextjs",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "exports": {
@@ -11,10 +11,16 @@
     "index.js"
   ],
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "next": ">=13.0.0"
+    "next": ">=13.0.0",
+    "react": ">=18.0.0"
   },
   "scripts": {
     "build": "babel . --out-dir dist --extensions .js,.jsx --ignore node_modules,dist,*.test.js,*.test.jsx"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1"
   }
-} 
+}
